<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.tugalsan</groupId>
    <artifactId>com.tugalsan.dsk.file.sync</artifactId>
    <version>1.0-SNAPSHOT</version>
    <dependencies>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>com.tugalsan.api.file.properties</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>com.tugalsan.api.desktop</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.external</groupId>
            <artifactId>AbsoluteLayout</artifactId>
            <version>RELEASE210</version>
        </dependency>
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>23</maven.compiler.release>
        <exec.mainClass>com.tugalsan.dsk.file.sync.Main</exec.mainClass>
    </properties>
    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>${exec.mainClass}</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>23</release>
                    <enablePreview>true</enablePreview>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                    <!-- <compilerArgs>
                       <arg>- -add-modules</arg>
                        <arg>jdk.incubator.vector</arg>
                        <arg>-XX:+EnableDynamicAgentLoading 
                    </compilerArgs> -->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>clean_and_upgrade</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>java</executable>
                    <commandlineArgs>-jar C:/git/trm/com.tugalsan.trm.migration.jakarta/target/com.tugalsan.trm.migration.jakarta-1.0.9-SNAPSHOT-shaded.jar C:\git\dsk\com.tugalsan.dsk.file.sync\target\com.tugalsan.dsk.file.sync-jar-with-dependencies.jar C:\git\dsk\com.tugalsan.dsk.file.sync\target\com.tugalsan.dsk.file.sync-jar-with-dependencies_cleaned-and-migrated.jar</commandlineArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <target>
                        <!--tugalsan.com -->
                        <!-- <copy file="C:\git\dsk\com.tugalsan.dsk.file.sync\target\com.tugalsan.dsk.file.sync-jar-with-dependencies_cleaned-and-migrated.jar" tofile="\\192.168.5.15\c\bin\com.tugalsan.dsk.file.sync\home\target\com.tugalsan.dsk.file.sync-jar-with-dependencies_cleaned-and-migrated.jar"/> -->
                        <!--mesametal.cloud -->
                        <copy file="C:\git\dsk\com.tugalsan.dsk.file.sync\target\com.tugalsan.dsk.file.sync-jar-with-dependencies_cleaned-and-migrated.jar" tofile="\\10.0.0.10\d\bin\com.tugalsan.dsk.file.sync\home\target\com.tugalsan.dsk.file.sync-jar-with-dependencies_cleaned-and-migrated.jar"/> 
                        <!--mebosa.cloud -->
                        <!-- <copy file="C:\git\dsk\com.tugalsan.dsk.file.sync\target\com.tugalsan.dsk.file.sync-jar-with-dependencies_cleaned-and-migrated.jar" tofile="\\192.168.7.1\d\bin\com.tugalsan.dsk.file.sync\home\target\com.tugalsan.dsk.file.sync-jar-with-dependencies_cleaned-and-migrated.jar"/> -->
                    </target>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>